Update docker image to support ARM-based processors
(like Mac M1's)